--- a/frontFarm/src/app/pages/ajustes-inventario/ajustes-inventario.component.html
+++ b/frontFarm/src/app/pages/ajustes-inventario/ajustes-inventario.component.html
@@ -110,23 +110,34 @@
             </button>
         </div>
 
-        <div class="col-md-2">
-            <label class="me-2 mb-0 mt-2" style="white-space: nowrap;">Código Barras</label>
-            <div class="position-relative">
-                <div class="form-check mt-2">
-                    <input type="checkbox" class="form-check-input" id="filtroCBDuplicados"
-                        [(ngModel)]="filtros.duplicadosCB" name="duplicadosCB" (change)="aplicarFiltros()" />
-                    <label class="form-check-label" for="filtroCBDuplicados">
-                        Mostrar duplicados
-                    </label>
-                </div>
+        <div class="d-flex align-items-center mt-2">
+            <!-- Etiqueta -->
+            <label class="me-3 mb-0" style="white-space: nowrap;">Código Barras: </label>
 
-                <button *ngIf="filtros.duplicadosCB" type="button"
-                    class="btn-icon-chico btn-sm btn-light position-absolute top-50 end-0 translate-middle-y btn-rojo-chico"
-                    (click)="limpiarFiltro('duplicadosCB')" matTooltip="Quitar filtro de duplicados">
-                    <fa-icon [icon]="faTimes"></fa-icon>
-                </button>
+            <!-- Checkbox + texto -->
+            <div class="form-check me-3 mb-0">
+                <input
+                type="checkbox"
+                class="form-check-input"
+                id="filtroCBDuplicados"
+                [(ngModel)]="filtros.duplicadosCB"
+                name="duplicadosCB"
+                (change)="aplicarFiltros()"
+                />
+                <label class="form-check-label" for="filtroCBDuplicados">
+                Mostrar duplicados
+                </label>
             </div>
+
+            <!-- Botón limpiar -->
+            <button
+                *ngIf="filtros.duplicadosCB"
+                type="button"
+                class="btn-icon-chico btn-sm btn-light btn-rojo-chico ms-2"
+                (click)="limpiarFiltro('duplicadosCB')"
+                matTooltip="Quitar filtro de duplicados"
+            ><fa-icon [icon]="faTimes"></fa-icon>
+            </button>
         </div>
 
     </div>
@@ -143,9 +154,9 @@
             <div>
                 <!-- <label class="tit-promo" style="margin-right: 1rem;">Datos básicos:</label> -->
                 <label style="margin-right: 10px;">Categoría:</label>
-                <input style="width: 100px; margin-right: 3rem;" type="text" formControlName="categoria">
+                <input style="width: 100px; margin-right: 2rem;" type="text" formControlName="categoria">
                 <label style="margin-right: 10px;">Ubicación:</label>
-                <input style="width: 100px; margin-right: 3rem;" type="text" formControlName="ubicacion">
+                <input style="width: 100px; margin-right: 2rem;" type="text" formControlName="ubicacion">
                 <label style="margin-right: 10px;">Stock Mínimo:</label>
                 <input style="width: 50px; margin-right: 2rem;" type="number" formControlName="stockMinimo">
                 <label style="margin-right: 10px;">Stock Máximo:</label>
@@ -158,17 +169,16 @@
                 </select>
             </div>
             <!-- 🟡 Zona Ajuste de Precios -->
-            <!-- <div>
-                <label class="tit-promo" style="margin-right: 2rem;">Sube/baja Precios:</label>
+            <div>
+                <label class="tit-promo" style="text-align: right; margin-right: 10px">Sube/baja Precios:</label>
 
                 <label [ngClass]="{'selected-radio': formularioMasivo.get('ajustePrecioModo')?.value === 'porcentaje'}"
-                    style="margin-right: 1rem;">
+                    style="text-align: right; margin-right: 5px">
                     <input type="radio" formControlName="ajustePrecioModo" value="porcentaje">Porcentaje
                 </label>
-                <label [class.disabled-label]="formularioMasivo.get('ajustePrecioModo')?.value != 'porcentaje'"
-                    style="margin-right: 10px;">%:</label>
                 <input [class.disabled-label]="formularioMasivo.get('ajustePrecioModo')?.value != 'porcentaje'"
-                    type="number" style="width: 50px; margin-right: 4rem;" formControlName="ajustePrecioPorcentaje">
+                    type="number" style="width: 50px; margin-right: 5px;" formControlName="ajustePrecioPorcentaje">
+                <label style="text-align: left; margin-right: 2rem;">%</label>
 
                 <label [ngClass]="{'selected-radio': formularioMasivo.get('ajustePrecioModo')?.value === 'cantidad'}"
                     style="margin-right: 1rem;">
@@ -178,7 +188,7 @@
                     style="margin-right: 10px;">$:</label>
                 <input [class.disabled-label]="formularioMasivo.get('ajustePrecioModo')?.value != 'cantidad'"
                     type="number" style="width: 50px; margin-right: 5rem;" formControlName="ajustePrecioCantidad">
-            </div> -->
+            </div>
         </div>
 
         <!-- Zona Promociones -->
@@ -364,9 +374,9 @@
                 <td style="text-align: center;">
                     <input type="checkbox" [checked]="p.generico" disabled>
                 </td>
-                <td>{{ p.stockMinimo }}</td>
-                <td>{{ p.stockMaximo }}</td>
-                <td [class.text-danger]="getExistencia(p) < (p.stockMinimo || 0)">
+                <td style="text-align: right">{{ p.stockMinimo }}</td>
+                <td style="text-align: right">{{ p.stockMaximo }}</td>
+                <td style="text-align: right" [class.text-danger]="getExistencia(p) < (p.stockMinimo || 0)">
                     {{ getExistencia(p) }}
                 </td>
 
@@ -449,12 +459,12 @@
                         <input type="text" formControlName="unidad" class="form-control" />
                     </div>
                     <div class="col-2">
-                        <label>Precio *</label>
-                        <input type="number" formControlName="precio" class="form-control" />
-                    </div>
-                    <div class="col-2">
                         <label>Costo *</label>
                         <input type="number" formControlName="costo" class="form-control" />
+                    </div>
+                    <div class="col-2">
+                        <label>Precio *</label>
+                        <input type="number" formControlName="precio" class="form-control" />
                     </div>
 
                     <div class="col-2">
