--- a/frontFarm/src/app/admin/farmacias/ajustes-inventario-farmacia/ajustes-inventario-farmacia.component.html
+++ b/frontFarm/src/app/admin/farmacias/ajustes-inventario-farmacia/ajustes-inventario-farmacia.component.html
@@ -112,19 +112,23 @@
                 <th>
                     <input [(ngModel)]="ajusteMasivo.ubicacionFarmacia"
                             class="form-control form-control-sm"
-                            type="text">
+                            type="text"
+                            placeholder="Ubic farma">
                 </th>
                 <th></th>
                 <th></th>
                 <th></th>
                 <th>
-                    <input [(ngModel)]="ajusteMasivo.existencia" class="form-control form-control-sm" type="number" style="width: 60px;">
+                    <input [(ngModel)]="ajusteMasivo.existencia" class="form-control form-control-sm" type="number" style="width: 60px;"
+                        placeholder="Exis">
                 </th>
                 <th>
-                    <input [(ngModel)]="ajusteMasivo.stockMin" class="form-control form-control-sm" type="number" style="width: 50px;">
+                    <input [(ngModel)]="ajusteMasivo.stockMin" class="form-control form-control-sm" type="number" style="width: 60px;"
+                        placeholder="Mín">
                 </th>
                 <th>
-                    <input [(ngModel)]="ajusteMasivo.stockMax" class="form-control form-control-sm" type="number" style="width: 50px;">
+                    <input [(ngModel)]="ajusteMasivo.stockMax" class="form-control form-control-sm" type="number" style="width: 60px;"
+                        placeholder="Máx">
                 </th>
                 <th>
                     <button class="btn-icon-chico btn-rojo-chico" (click)="resetInputsMasivos()"
@@ -134,7 +138,8 @@
                     </button>
                 </th>
                 <th>
-                    <input [(ngModel)]="ajusteMasivo.precioVenta" class="form-control form-control-sm" type="number" style="width: 70px;">
+                    <input [(ngModel)]="ajusteMasivo.precioVenta" class="form-control form-control-sm" type="number" style="width: 72px;"
+                        placeholder="Precio">
                 </th>
                 <th>
                     <button class="btn-verde-chico" (click)="guardarAjusteMasivo()"
@@ -142,7 +147,7 @@
                         {{ aplicandoCambiosMasivos ? 'Guardando…' : 'Aplicar a todos' }}
                     </button>
                 </th>
-                <th></th>
+                
             </tr>
             <tr>
                 <th>
