Surtir farmacias se realizó vista previa compacta y ordenada

--- a/frontFarm/src/app/pages/surtir-farmacia/surtir-farmacia.component.html
+++ b/frontFarm/src/app/pages/surtir-farmacia/surtir-farmacia.component.html
@@ -22,7 +22,7 @@
     </label>
 
     <label>
-      <span class="subtitulo">Ubicación:</span>
+      <span class="subtitulo">Ubic.&nbsp;Almacén:</span>
       <input type="text" formControlName="ubicacion"/>
     </label>
 
