Inventario portátil mejorado sin mostrar existencias del sistema

--- a/frontFarm/src/app/admin/usuarios/usuarios.component.html
+++ b/frontFarm/src/app/admin/usuarios/usuarios.component.html
@@ -80,7 +80,8 @@
                                 <option value="admin">Admin</option>
                                 <option value="empleado">Empleado</option>
                                 <option value="medico">Médico</option>
-                                <option value="ajustaAlmacen">Ajusta almac. y farma</option>
+                                <option value="ajustaAlmacen">Ajusta almacén y farmacias</option>
+                                <option value="ajustaSoloAlmacen">Ajusta sólo almacén</option>
                                 <option value="ajustaFarma">Ajusta farmacia</option>
                             </select>
                         </div>
