--- a/frontFarm/src/app/components/sidebar/sidebar.component.html
+++ b/frontFarm/src/app/components/sidebar/sidebar.component.html
@@ -50,7 +50,7 @@
           </li>
         </ul>
       </li>
-      
+
       <li [routerLink]="'/usuarios'" routerLinkActive="active">Usuarios <fa-icon [icon]="'user'"
           class="menu-icon"></fa-icon>
       </li>
@@ -161,14 +161,18 @@
           <li [routerLink]="'reporte/resumen-utilidades'" routerLinkActive="active" class="submenu-item">
             <span>Resumen utilidades<fa-icon [icon]="'sack-dollar'" class="menu-icon"></fa-icon></span>
           </li>
-        
-        
+
+
           <li [routerLink]="'reporte/utilidades'" routerLinkActive="active" class="submenu-item">
             <span>TOP utilidades<fa-icon [icon]="'sack-dollar'" class="menu-icon"></fa-icon></span>
           </li>
 
           <li [routerLink]="'reportes/compras-ventas'" routerLinkActive="active" class="submenu-item">
             <span>Compras vs Ventas<fa-icon [icon]="'sack-dollar'" class="menu-icon"></fa-icon></span>
+          </li>
+
+          <li [routerLink]="'/reporte/inventario-fisico'" routerLinkActive="active" class="submenu-item">
+            <span>Inventario físico <fa-icon [icon]="'scale-balanced'" class="menu-icon"></fa-icon></span>
           </li>
         </ul>
 
