--- a/frontFarm/src/app/components/sidebar/sidebar.component.css
+++ b/frontFarm/src/app/components/sidebar/sidebar.component.css
@@ -64,6 +64,39 @@ li:hover {
   margin-left: 10px;
 }
 
+.menu-dashboard {
+  font-size: 16px;
+  font-weight: bold;
+  color: rgb(247, 246, 245);
+  text-align: left;
+  padding: 10px;
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+.submenu-dashboard {
+  padding: 10px;
+  border-radius: 5px;
+}
+
+.submenu-dashboard li {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
+  font-size: 14px;
+  color: rgb(251, 175, 237);
+}
+
+.submenu-dashboard li:hover {
+  color: rgb(5, 10, 157);
+  background-color: rgb(244, 243, 241);
+}
+
+
 .menu-title {
   font-size: 16px;
   font-weight: bold;
@@ -88,7 +121,7 @@ li:hover {
   align-items: center;
   padding: 8px;
   font-size: 14px;
-  color: white;
+  color: rgb(253, 190, 190);
 }
 
 .submenu li:hover {
