--- a/frontFarm/src/app/components/sidebar/sidebar.component.html
+++ b/frontFarm/src/app/components/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
     <ul *ngIf="expandedMenu === 'dashboard'" class="submenu-dashboard">
       <li [routerLink]="'/dashboard/ventas-tiempo'"
           routerLinkActive="active">Visión general
-          <fa-icon [icon]="'chart-line'" class="menu-icon"></fa-icon>
+          <fa-icon [icon]="'chart-line'"></fa-icon>
       </li>
 
       <li [routerLink]="'/dashboard/ranking-productos'" 
