--- a/frontFarm/src/app/pages/dashboard/ventas-tiempo-chart/ventas-tiempo-chart.component.css
+++ b/frontFarm/src/app/pages/dashboard/ventas-tiempo-chart/ventas-tiempo-chart.component.css
@@ -29,24 +29,25 @@ select, input {
 }
 
 .kpi-card {
-  background: #fff;
+  /* background: #fff; */
   border-radius: 10px;
   padding: 1rem;
   box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+  text-align: center;
 }
 
 .kpi-title {
   font-size: 0.85rem;
-  color: #666;
+  /* color: #666; */
   margin-bottom: 0.4rem;
 }
 
 .kpi-value {
-  font-size: 1.4rem;
+  font-size: 1rem;
   font-weight: 600;
 }
 
-.kpi-card.ventas { border-left: 5px solid #1E88E5; }
-.kpi-card.utilidad { border-left: 5px solid #2E7D32; }
-.kpi-card.margen { border-left: 5px solid #6A1B9A; }
-.kpi-card.ventas-num { border-left: 5px solid #F57C00; }
+.kpi-card.ventas { border-left: 5px solid #1E88E5; background-color: rgb(121, 205, 253); color: #012eac;}
+.kpi-card.utilidad { border-left: 5px solid #2E7D32; background-color: rgb(205, 249, 193); color: #00551c; }
+.kpi-card.margen { border-left: 5px solid #6A1B9A; background-color: rgb(245, 207, 250); color: #62027a; }
+.kpi-card.ventas-num { border-left: 5px solid #F57C00; background-color: rgb(252, 192, 162); color: #913101; }
